shrink the overflow width on app selector (bug 1030361)

--- a/src/media/css/app_selector.styl
+++ b/src/media/css/app_selector.styl
@@ -71,7 +71,7 @@
         }
         .name,
         .author {
-            max-width: 250px;
+            max-width: 240px;
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
